Moved partials folder out of src and into a new styles folder. Added styles to header and corresponding classes to header jsx

--- a/src/components/ColorPalette/ColorPalette.scss
+++ b/src/components/ColorPalette/ColorPalette.scss
@@ -1,5 +1,5 @@
-@use "../../partials/variables";
-@use "../../partials/mixins";
+@use "../../styles/partials/variables";
+@use "../../styles/partials/mixins";
 
 .palette {
   display: flex;
