Update header font styles

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,6 +2,7 @@
 @use "../../styles/partials/mixins" as *;
 
 .header {
+  font-family: "Fira Sans";
   &__title {
     @include section-header-desktop-font;
     color: $dark-brown !important;
