--- a/src/components/BoardImages/BoardImages.scss
+++ b/src/components/BoardImages/BoardImages.scss
@@ -1,4 +1,4 @@
-.images {
+.board-images {
   margin: 0 auto;
   width: 90%;
   // column-count: 5;
@@ -19,7 +19,7 @@
   &__image {
     // max-height: 100%;
     max-width: 100%;
-    // height: 90%;
+    height: auto !important;
     // object-fit: cover;
   }
 }
