--- a/src/components/Images/Images.scss
+++ b/src/components/Images/Images.scss
@@ -3,23 +3,56 @@
   width: 90%;
   // column-count: 5;
   // column-gap: 0px;
-  line-height: 0;
+  // line-height: 0;
   padding: 1rem;
 
   &__list {
     // display: flex;
     // flex-wrap: wrap;
     list-style-type: none;
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    margin: 0;
+    // display: grid;
+    // grid-template-columns: repeat(5, 1fr);
+    // margin: 0;
     padding-left: 0;
+    // display: grid;
+    // grid-template-columns: repeat(4, 1fr);
+    // grid-auto-flow: dense;
+    // gap: 10px;
   }
+
+  // &__list-item {
+  //   margin: 0;
+  //   display: grid;
+  //   grid-template-rows: 1fr auto;
+  // }
 
   &__image {
     // max-height: 100%;
     max-width: 100%;
     // height: 90%;
     // object-fit: cover;
+    // grid-row: 1 / -1;
+    // grid-column: 1;
+    // max-width: 100%;
+    // display: block;
   }
+}
+
+.masonry-grid {
+  display: -webkit-box; /* Not needed if autoprefixing */
+  display: -ms-flexbox; /* Not needed if autoprefixing */
+  display: flex;
+  margin-left: -30px; /* gutter size offset */
+  width: auto;
+}
+.masonry-grid_column {
+  padding-left: 5px; /* gutter size */
+  background-clip: padding-box;
+}
+
+/* Style your items */
+.masonry-grid_column > img {
+  /* change div to reference your elements you put in <Masonry> */
+
+  margin-bottom: 5px;
 }
