--- a/src/components/ColorPalette/ColorPalette.scss
+++ b/src/components/ColorPalette/ColorPalette.scss
@@ -12,6 +12,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 0 0.2rem;
   }
 
   &__swatch:hover {
