--- a/src/components/Images/Images.scss
+++ b/src/components/Images/Images.scss
@@ -1,40 +1,14 @@
 .images {
   margin: 0 auto;
-  width: 90%;
-  // column-count: 5;
-  // column-gap: 0px;
-  // line-height: 0;
+  max-height: 70%;
+  max-width: 90%;
   padding: 1rem;
-
-  &__list {
-    // display: flex;
-    // flex-wrap: wrap;
-    list-style-type: none;
-    // display: grid;
-    // grid-template-columns: repeat(5, 1fr);
-    // margin: 0;
-    padding-left: 0;
-    // display: grid;
-    // grid-template-columns: repeat(4, 1fr);
-    // grid-auto-flow: dense;
-    // gap: 10px;
-  }
-
-  // &__list-item {
-  //   margin: 0;
-  //   display: grid;
-  //   grid-template-rows: 1fr auto;
-  // }
+  overflow: hidden;
 
   &__image {
-    // max-height: 100%;
     max-width: 100%;
-    // height: 90%;
-    // object-fit: cover;
-    // grid-row: 1 / -1;
-    // grid-column: 1;
-    // max-width: 100%;
-    // display: block;
+    max-height: 100%;
+    margin-bottom: 0.3rem;
   }
 }
 
@@ -53,6 +27,5 @@
 /* Style your items */
 .masonry-grid_column > img {
   /* change div to reference your elements you put in <Masonry> */
-
   margin-bottom: 5px;
 }
