Updated styles and removed copy functionality from board creator color palette

--- a/src/components/Board/Board.scss
+++ b/src/components/Board/Board.scss
@@ -45,10 +45,18 @@
       &:hover {
         color: $dark-brown;
       }
+
+      &:active {
+        border: 3px solid #eed6d3;
+      }
     }
 
     &--delete {
       background-color: $misty-rose !important;
+
+      &:active {
+        background-color: #e2e8f0 !important;
+      }
     }
   }
 }
