--- a/src/components/BoardsGallery/BoardsGallery.scss
+++ b/src/components/BoardsGallery/BoardsGallery.scss
@@ -6,14 +6,17 @@
 }
 
 .board-gallery {
+  margin: 0 auto;
+  max-width: 1280px;
   display: flex;
   flex-wrap: wrap;
-  // justify-content: space-between;
+  justify-content: space-between;
   padding: 0 5rem;
 
   &__title {
+    @include page-header-desktop-font;
     color: $dark-brown;
-    margin: 0 0 2rem 5rem;
+    margin: 0 0 2rem 15rem;
   }
 }
 
