--- a/src/components/Images/Images.scss
+++ b/src/components/Images/Images.scss
@@ -13,19 +13,17 @@
 }
 
 .masonry-grid {
-  display: -webkit-box; /* Not needed if autoprefixing */
-  display: -ms-flexbox; /* Not needed if autoprefixing */
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  margin-left: -30px; /* gutter size offset */
+  margin-left: -30px;
   width: auto;
 }
 .masonry-grid_column {
-  padding-left: 5px; /* gutter size */
+  padding-left: 5px;
   background-clip: padding-box;
 }
 
-/* Style your items */
 .masonry-grid_column > img {
-  /* change div to reference your elements you put in <Masonry> */
   margin-bottom: 5px;
 }
