Add breakpoint variables and mixins to respective files. Update header to be responsive

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,3 +1,9 @@
+//breakpoints
+$tablet-width: 768px;
+$desktop-width: 1280px;
+
+$max-content-width: 1280px;
+
 //colors
 $spanish-pink: #e8b4b8;
 $misty-rose: #eed6d3;
