--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,16 +2,21 @@
 @use "../../styles/partials/mixins" as *;
 
 .header {
-  font-family: "Fira Sans";
+  font-family: "Fira Sans", sans-serif;
+  flex-direction: column;
+  align-items: center;
+  @include tablet {
+    padding-left: 2rem;
+    flex-direction: row !important;
+  }
 
   &__title {
     @include section-header-desktop-font;
     color: $dark-brown !important;
-    margin-left: 4rem;
   }
 
   &__links {
-    margin-right: 4rem !important;
+    margin: 0 2rem !important;
   }
 
   &__item-link {
