--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -1,4 +1,17 @@
 @use "./typography" as *;
+@use "./variables" as *;
+
+@mixin tablet {
+  @media screen and (min-width: $tablet-width) {
+    @content;
+  }
+}
+
+@mixin desktop {
+  @media screen and (min-width: $desktop-width) {
+    @content;
+  }
+}
 
 @mixin page-header-desktop-font {
   font-size: 2.0625rem;
