--- a/src/components/BoardCreator/BoardCreator.scss
+++ b/src/components/BoardCreator/BoardCreator.scss
@@ -8,21 +8,32 @@
   border: 1px solid #dee2e6;
   border-radius: 0.3rem;
   height: 80vh;
+  width: 90%;
   font-family: "Fira Sans";
   background-color: #f7f8f9;
-  margin: 0 10rem;
   padding: 0.8rem;
+  margin: 0 auto;
 
   &__title {
-    @include page-header-desktop-font;
+    @include subheader-desktop-font;
     color: $dark-brown;
-    padding-left: 2rem;
+    text-align: center;
     text-transform: uppercase;
+
+    @include tablet {
+      @include section-header-desktop-font;
+      text-align: start;
+      padding-left: 2rem;
+    }
   }
 
   &__btn-container {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
+
+    @include tablet {
+      justify-content: flex-end;
+    }
   }
 
   &__btn {
@@ -34,7 +45,10 @@
     @include labels-button-desktop-font;
     font-size: 1rem;
     padding: 0.5rem 0;
-    margin-right: 2rem;
+
+    @include tablet {
+      margin-right: 2rem;
+    }
 
     &--cancel {
       text-align: center;
