--- a/src/components/Board/Board.scss
+++ b/src/components/Board/Board.scss
@@ -1,62 +1,1 @@
-@use "../../styles/partials/variables" as *;
-@use "../../styles/partials/mixins" as *;
-
-.selected-board {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  border: 1px solid #dee2e6;
-  border-radius: 0.3rem;
-  height: 80vh;
-  font-family: "Fira Sans";
-  background-color: #f7f8f9;
-  margin: 0 10rem;
-  padding: 0.8rem;
-
-  &__title {
-    @include page-header-desktop-font;
-    color: $dark-brown;
-    padding-left: 2rem;
-    text-transform: uppercase;
-  }
-
-  &__btn-container {
-    display: flex;
-    justify-content: flex-end;
-  }
-
-  &__btn {
-    color: $dark-brown;
-    border-radius: 10rem !important;
-    border: none;
-    width: 6rem;
-    @include labels-button-desktop-font;
-    font-size: 1rem;
-    padding: 0.5rem 0;
-    margin-right: 2rem;
-
-    &--close {
-      text-align: center;
-      text-decoration: none;
-      background-color: $white;
-      border: 1px solid $misty-rose;
-      margin-right: 1rem;
-
-      &:hover {
-        color: $dark-brown;
-      }
-
-      &:active {
-        border: 3px solid #eed6d3;
-      }
-    }
-
-    &--delete {
-      background-color: $misty-rose !important;
-
-      &:active {
-        background-color: #e2e8f0 !important;
-      }
-    }
-  }
-}
+@use "../../styles/partials/global" as *;
